# zero2prod

./: Cargo.toml  Dockerfile  readme.md  sqlx-data.json
.github/workflows/: general.yml
configuration/: production.yaml
migrations/: 20211226191501_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
