[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
serde = "1.0.115"
actix-web = "=4.0.0-beta.19"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.11.0"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
# We need the `json` feature flag to serialize/deserialize JSON payloads
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1.19"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1.1"
tracing-actix-web = "=0.5.0-beta.9"
serde-aux = "3.0.1"
log = "0.4"
unicode-segmentation = "1.8.0"
validator = "0.14.0"
rand = { version = "0.8", features=["std_rng"] }
secrecy = { version = "0.8", features = ["serde"] }
sqlx = { version = "0.5.5", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }

[dev-dependencies]
once_cell = "1.7.2"
claim = "0.5.0"
fake = "~2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"
serde_json = "1.0.61"
linkify = "0.8.0"
